figure related tests updated and all pom.xml updated also